--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
     <script src="js/vue.global.js"></script>
     <script src="js/vue-router.global.js"></script>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet/less" type="text/css" href="style/style.less"/>
+    <script src="js/less.js" type="text/javascript"></script>
     <title>FATEC Repository</title>
 </head>
 
