--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,11 @@
     <script src="js/vue.global.js"></script>
     <script src="js/vue-router.global.js"></script>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="js/bootstrap.bundle.min.js">
+    <link rel="stylesheet" href="js/bootstrap.min.css">
     <link rel="stylesheet/less" type="text/css" href="style/style.less"/>
     <script src="js/less.js" type="text/javascript"></script>
-    <title>FATEC Repository</title>
+    <title>PI Repository</title>
 </head>
 
 <body>
