--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="js/bootstrap.min.css">
     <link rel="stylesheet/less" type="text/css" href="style/style.less"/>
     <script src="js/less.js" type="text/javascript"></script>
-    <title>PI Repository</title>
+    <link rel="icon" href="images/logo-cps.png" type="application/atom+xml" title="Atom">
+    <title>IP Repository</title>
 </head>
 
 <body>
