--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="js/bootstrap.min.css">
     <link rel="stylesheet/less" type="text/css" href="style/style.less"/>
     <script src="js/less.js" type="text/javascript"></script>
+    <script src="js/sweetalert.js"></script>
     <title>PI Repository</title>
 </head>
 
