--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/vue.global.js"></script>
     <script src="js/vue-router.global.js"></script>
-    <link rel="stylesheet" href="js/bootstrap.bundle.min.js">
+    <script src="js/bootstrap.bundle.min.js" defer></script>
     <link rel="stylesheet" href="js/bootstrap.min.css">
     <link rel="stylesheet/less" type="text/css" href="style/style.less" />
     <script src="js/less.js" type="text/javascript"></script>
